# cps-quadrotor

./: CMakeLists.txt  CPS.txt  CPS_data.txt  LICENSE  README.md  package.xml
docs/: commandPose_data.txt
launch/: hector.launch  test.launch
launch/quadrotor/: spawn_quadrotor.launch
scripts/: commandTwist_data.txt  simple_controller.py  state_ground_truth_listener.py  teleop_pose_keyboard.py  teleop_twist_keyboard.py  test_overshoot.py
test_files/: 10_2018-4-17-14-24-58.txt  1_2018-4-17-13-58-2.txt  1_2018-4-17-14-32-44.txt  2018-4-14-10-58-23.txt  2018-4-17-10-55-30.txt  2_2018-4-17-16-47-1.txt  5_2018-4-17-14-3-18.txt  5_2018-4-17-19-13-28.txt  7_2018-4-17-20-56-20.txt  8_2018-4-17-21-9-5.txt  CPS_data.txt  PATH ERROR  PATH_ERROR_TWO.txt  PathError.py  README.md  pathError.py  random1_2018-4-19-16-8-20.txt  random2_2018-4-19-16-10-58.txt  random3_2018-4-19-16-13-28.txt  random4_2018-4-19-16-16-19.txt  random5_2018-4-19-16-4-5.txt  random6_2018-4-19-16-19-28.txt  random7_2018-4-19-16-39-0.txt  random9_2018-4-19-17-2-26.txt
urdf/: quadrotor.gazebo.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_plugins.gazebo.xacro  quadrotor_sensors.gazebo.xacro
